Sat Jul 21 00:19:54 2001  Akinori MUSHA  <knu@iDaemons.org>

	* gc.c (ruby_xrealloc): fix a dangling bug which led memory
	  reallocation to fail even though the second try after a GC
	  succeeds.

Fri Jul 20 22:35:23 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* win32/config.h.in: merge from 1.7: add SIZEOF___INT64 definition.

	* win32/config.status.in: merge from 1.7: add ENABLE_SHARED = yes.

Thu Jul 19 19:16:50 2001 Stephen White <spwhite@chariot.net.au>

	* lib/irb/input-method.rb: patch to irb to remove blank lines from
	  the readline history buffer.
	
Sun Jul 19 06:01:12 2001  Minero Aoki  <aamine@loveruby.net>

	* doc/net/smtp.rd.ja, pop.rd.ja, http.rd.ja: new files.

Tue Jul 17 11:22:01 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regex.c (NUM_FAILURE_ITEMS): was confusing NUM_REG_ITEMS and
	  NUM_NONREG_ITEMS, which have happened to be same value.

Tue Jul 17 11:18:42 2001  Usaku Nakamura  <usa@osb.att.ne.jp>

	* ext/extmk.rb.in: modify RM macro because command.com/cmd.exe don't
	  recognize single quotation as quote character.

	* lib/mkmf.rb: ditto.

Mon Jul 16 12:58:07 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (proc_invoke): should preserve iter status for embedded
	  frame in the block.

Mon Jul 16 00:04:39 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (rb_file_s_expand_path): may overrun buffer on stack.

Sat Jul 14 06:25:00 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/net/http.rb: HTTP#proxy? did not worked.

Sat Jul 14 02:56:19 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/extmk.rb.in: support multi-level ext/ directories.
	  (e.g. you can have ext/foo, ext/foo/bar and ext/foo/baz)

Sat Jul 14 02:55:02 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/.cvsignore: let cvs ignore extinit.c.

Fri Jul 13 23:47:35 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* regex.c (re_search): should consider reverse search.

Fri Jul 13 23:18:19 2001  Akinori MUSHA  <knu@iDaemons.org>
